--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <h1>minecraft skins</h1>
-<a href="2019_10_10_cursed-roblox-noob-13548063.png">file</a>
+<a href="2019_10_10_cursed-roblox-noob-13548063.png">cursed-roblox-noob</a>
 
