--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ how to download and upload to minecraft:
 3. click <a href="https://my.minecraft.net/profile/skin">here</a> and click chose a file. 
 4. find the picture and u should be good to go! 
 <a href="2019_10_10_cursed-roblox-noob-13548063.png">roblox-noob</a>
-
+<a href="2019_10_07_roblox-noob-13539847.png">roblox-noob</a>
 
 
 
