--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@ how to download and upload to minecraft:
 4. find the picture and u should be good to go! 
 <a href="2019_10_10_cursed-roblox-noob-13548063.png">cursed-roblox-noob</a>
 <a href="2019_10_07_roblox-noob-13539847.png">roblox-noob</a>
-
+<a href="b4fcd0b809f0b84035065c7c4b7e011e6bc2f7b3.png">white-blue</a>
 
 
