--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <h1>minecraft skins</h1>
 how to download and upload to minecraft: 
-1. click the skin u want to download. 
-2. right-click on the picture and press save image as... 
+1. click the skin you want to download. 
+2. right-click on the picture and press save image as... and then chose where your file is gonna be
 3. click <a href="https://my.minecraft.net/profile/skin">here</a> and click chose a file. 
 4. find the picture and u should be good to go! 
 skins: <a href="2019_10_10_cursed-roblox-noob-13548063.png">cursed-roblox-noob</a>
