--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ how to download and upload to minecraft:
 1. click the skin you want to download. 
 2. right-click on the picture and press save image as... and then chose where your file is gonna be
 3. click <a href="https://my.minecraft.net/profile/skin">here</a> and click chose a file. 
-4. find the picture and u should be good to go! 
+4. find the picture, click it, click open and you should be good to go! 
 skins: <a href="2019_10_10_cursed-roblox-noob-13548063.png">cursed-roblox-noob</a>
 <a href="2019_10_07_roblox-noob-13539847.png">roblox-noob</a>
 <a href="b4fcd0b809f0b84035065c7c4b7e011e6bc2f7b3.png">white-blue</a>
