--- a/index.html
+++ b/index.html
@@ -8,5 +8,5 @@ skins: <a href="2019_10_10_cursed-roblox-noob-13548063.png">cursed-roblox-noob</
 <a href="2019_10_07_roblox-noob-13539847.png">roblox-noob</a>
 <a href="b4fcd0b809f0b84035065c7c4b7e011e6bc2f7b3.png">white-blue</a>
 <a href="f0874cc4406d0c1827ffdd39140fd8bf88a85fcf.png">cursed-skin</a>
-pictures: cursed-skin: <img src="2019-12-22_11.54.24.png"height="180"width="200">
+pictures: cursed-skin: <img src="2019-12-22_11.54.24.png"height="180%"width="200%">
 
