--- a/index.html
+++ b/index.html
@@ -21,5 +21,5 @@ skins: <a href="2019_10_10_cursed-roblox-noob-13548063.png">cursed-roblox-noob</
 pictures: cursed-skin: 
 <figure>  
 <img src="2019-12-22_11.54.24.png"height="30%"width="30%">
-<figcaption> lololol </figcaption>  
+<figcaption> vursed roblox noob: </figcaption>  
  <figure>
