--- a/index.html
+++ b/index.html
@@ -23,5 +23,5 @@ pictures:
 cursed-skin: 
 <figure>  
 <img src="2019-12-22_11.54.24.png"height="30%"width="30%">
-<figcaption> vursed roblox noob: </figcaption>  
+<figcaption> cursed roblox noob: </figcaption>  
  <figure>
