--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <h1>minecraft skins</h1>
+(this website is not 100% done yet)
+<br>
 my youtube channel: <a href="https://www.youtube.com/channel/UC_ii1FXaAU0kn5FCjZJHDjg?view_as=subscriber">swox player</a>
 <p>
 how to download and upload to minecraft:
