--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ how to download and upload to minecraft:
 <br>  
 2. right-click on the picture and press save image as... and then chose where your file is gonna be
 <br>  
-3. click <a href="https://my.minecraft.net/profile/skin">here</a> and click chose a file.
+3. click <a href="https://my.minecraft.net/profile/skin">here</a> and click select a file.
 <br>  
 4. find the picture, click it, click open and you should be good to go! 
 <br>
