--- a/index.html
+++ b/index.html
@@ -1,3 +1,23 @@
+<html>
+<head>
+<!-- Default Statcounter code for unne27 https://unne27.github.io/ -->
+<script type="text/javascript">
+var sc_project=12166913; 
+var sc_invisible=1; 
+var sc_security="2e9e9d62"; 
+var sc_https=1; 
+</script>
+<script type="text/javascript"
+src="https://www.statcounter.com/counter/counter.js" async></script>
+<noscript><div class="statcounter"><a title="Web Analytics"
+href="https://statcounter.com/" target="_blank"><img class="statcounter"
+src="https://c.statcounter.com/12166913/0/2e9e9d62/1/" alt="Web
+Analytics"></a></div></noscript>
+<!-- End of Statcounter Code -->
+</head>
+<body>
+
+
 <h1>minecraft skins</h1>
 (this website is not 100% done yet)
 <p>
@@ -34,3 +54,7 @@ cursed-skin:
 <img src="2019-12-22_11.54.24.png"height="30%"width="30%">
 <figcaption> cursed roblox noob: </figcaption>  
  <figure>
+
+</body>
+</html>
+ 
