--- a/index.html
+++ b/index.html
@@ -47,14 +47,6 @@ skins:
 <br>
 <a href="c6333ae7c6e84634ca5a1bae92f2e2bb9d346ea3.png">greenyman</a>
 <p>
-pictures:
-<br> 
-cursed-skin: 
-<figure>  
-<img src="2019-12-22_11.54.24.png"height="30%"width="30%">
-<figcaption> cursed roblox noob: </figcaption>  
- <figure>
 
-</body>
-</html>
+ <h1> Minecraft worlds </h1>
  
