--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ Analytics"></a></div></noscript>
 <body>
 
 
-<h1>minecraft skins</h1>
+<h1>Minecraft skins</h1>
 (this website is not 100% done yet)
 <p>
 my youtube channel: <a href="https://www.youtube.com/channel/UC_ii1FXaAU0kn5FCjZJHDjg?view_as=subscriber">swox player</a>
