--- a/index.html
+++ b/index.html
@@ -48,5 +48,5 @@ skins:
 <a href="c6333ae7c6e84634ca5a1bae92f2e2bb9d346ea3.png">greenyman</a>
 <p>
 
- <h1> Minecraft worlds </h1>
+ <h1> Minecraft super flat worlds </h1>
  
