--- a/index.html
+++ b/index.html
@@ -50,3 +50,17 @@ skins:
 
  <h1> Minecraft super flat worlds </h1>
  
+ how to use the superflat worlds:
+ <br>
+ 1. go to singleplayer and click create new world.
+ <br>
+ 2. go to more world options and click the world type until it says superflat.
+ <br>
+ 3. under the world type it says customize, click customize.
+ <br>
+ 4. click presets and copy a text below and paste it where on top, and you should be good to go!
+ <p>
+worlds:
+<br>
+minecraft:sand,2*minecraft:sand,minecraft:sand;minecraft:plains;village  
+ 
