--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ skins:
  <br>
  3. under the world type it says customize, click customize.
  <br>
- 4. click presets and copy a text below and paste it where on top, and you should be good to go!
+ 4. click presets and copy a text below on this website and paste it on top in minecraft, and you should be good to go!
  <p>
 worlds:
 <br>
