--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@ skins:
 <p>
 
  <h1> Minecraft super flat worlds </h1>
+ <br>
+ <small> 1.15.1 <small>
  
  how to use the superflat worlds:
  <br>
