--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ skins:
 
  <h1> Minecraft super flat worlds </h1>
  <br>
- <small> 1.15.1 <small>
+ <small> 1.15.1 </small>
  <p>
  
  how to use the superflat worlds:
