--- a/index.html
+++ b/index.html
@@ -68,4 +68,7 @@ worlds:
 sand survival:
 <br>
 minecraft:sand,2*minecraft:sand,minecraft:sand;minecraft:plains;village  
- 
+<br>
+THE FLOOR IS TNT!
+<br>
+minecraft:TNT,2*minecraft:TNT,minecraft:TNT;minecraft:plains;village
