--- a/index.html
+++ b/index.html
@@ -71,4 +71,4 @@ minecraft:sand,2*minecraft:sand,minecraft:sand;minecraft:plains;village
 <br>
 THE FLOOR IS TNT!
 <br>
-minecraft:TNT,2*minecraft:TNT,minecraft:TNT;minecraft:plains;village
+minecraft:tnt,2*minecraft:tnt,minecraft:tnt;minecraft:plains;village
