--- a/index.html
+++ b/index.html
@@ -69,6 +69,6 @@ sand survival:
 <br>
 minecraft:sand,2*minecraft:sand,minecraft:sand;minecraft:plains;village  
 <br>
-THE FLOOR IS TNT!
+THE FLOOR IS TNT!:
 <br>
 minecraft:tnt,2*minecraft:tnt,minecraft:tnt;minecraft:plains;village
