--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@ skins:
 <a href="f0874cc4406d0c1827ffdd39140fd8bf88a85fcf.png">cursed-skin</a>
 <br>
 <a href="c6333ae7c6e84634ca5a1bae92f2e2bb9d346ea3.png">greenyman</a>
+<br>
+ <a href="1e9ffb7eac7401dae6cfcd86e8ac4f688c80531a.png">grassblock</a>
 <p>
 
  <h1> Minecraft super flat worlds </h1>
