--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@ skins:
 <a href="c6333ae7c6e84634ca5a1bae92f2e2bb9d346ea3.png">greenyman</a>
 <br>
  <a href="1e9ffb7eac7401dae6cfcd86e8ac4f688c80531a.png">grassblock</a>
+<br>
+ <a href="ce563cb13f04759d9c247822744ff8e6b0603646.png">head</a>
+ 
 <p>
 
  <h1> Minecraft super flat worlds </h1>
