--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@ skins:
  <a href="1e9ffb7eac7401dae6cfcd86e8ac4f688c80531a.png">grassblock</a>
 <br>
  <a href="ce563cb13f04759d9c247822744ff8e6b0603646.png">head</a>
+ <br>
+ <a href="e515f63b8d71b8bc3dda4e4dc412b244a5fce3b5.png">hot skin</a>
  
 <p>
 
