--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ Analytics"></a></div></noscript>
 <p>
 my youtube channel: <a href="https://www.youtube.com/channel/UC_ii1FXaAU0kn5FCjZJHDjg?view_as=subscriber">swox player</a>
 <p>
-how to download and upload to minecraft:
+how to download a skin and upload it to minecraft:
 <br>  
 1. click the skin you want to download.
 <br>  
