--- a/index.html
+++ b/index.html
@@ -77,3 +77,24 @@ minecraft:sand,2*minecraft:sand,minecraft:sand;minecraft:plains;village
 THE FLOOR IS TNT!:
 <br>
 minecraft:tnt,2*minecraft:tnt,minecraft:tnt;minecraft:plains;village
+  
+  
+  
+ <h1> worlds </h1>
+ <p>
+how to set up the world:
+  <br>
+  on windows 10:
+  <br>
+  1. press windows bottun + R
+  <br>
+  2. type %appdata%/.minecraft
+  <br>
+  3. find the folder called "saves"
+  <br>
+  4. move the world file in to the saves folder
+  <br>
+  5. start minecraft and go to singleplayer and get in to the world and have fun!
+  <p>
+   worlds:
+   
