--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ how to set up the world:
   <br>
   1. press windows bottun + R
   <br>
-  2. type %appdata%/.minecraft
+  2. type %appdata%\.minecraft
   <br>
   3. find the folder called "saves"
   <br>
