--- a/index.html
+++ b/index.html
@@ -97,4 +97,6 @@ how to set up the world:
   5. start minecraft and go to singleplayer and get in to the world and have fun!
   <p>
    worlds:
+   <br>
+    <a href="Ny värld (18).zip">new world</a>
    
