--- a/index.html
+++ b/index.html
@@ -94,9 +94,11 @@ how to set up the world:
   <br>
   4. move the world file in to the saves folder
   <br>
-  5. start minecraft and go to singleplayer and get in to the world and have fun!
+  5. right-click on the folder and press extract all...
+  <br>
+  6. click extract and start minecraft and go to singleplayer and get in to the world and have fun!
   <p>
    worlds:
-   <br>
-    <a href="Ny värld (18).zip">new world</a>
+   
+    
    
