--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ minecraft:tnt,2*minecraft:tnt,minecraft:tnt;minecraft:plains;village
   
   
   
- <h1> worlds </h1>
+ <h1> Minecraft worlds </h1>
  <p>
 how to set up the world:
   <br>
