--- a/media.html
+++ b/media.html
@@ -1,8 +1,8 @@
 <a href="index.html">go back</a>
 <p>
-youtube: <a href="https://www.youtube.com/channel/UCtF5f5aLOjY0Kg4mGZOOSnQ>unne27</a>
+youtube: <a href="https://www.youtube.com/channel/UCtF5f5aLOjY0Kg4mGZOOSnQ">unne27</a>
 <p>
-twitch: <a href="https://twitch.tv/unne27>unne27</a>    
+twitch: <a href="https://twitch.tv/unne27">unne27</a>    
   
  
   
