--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ Analytics"></a></div></noscript>
 <h1>Minecraft skins</h1>
 (this website is not 100% done yet)
 <p>
-media: <a href="media.html">click here!</a>
+social media: <a href="media.html">click here!</a>
 <p>
 how to download a skin and upload it to minecraft:
 <br>  
