--- a/sounds.html
+++ b/sounds.html
@@ -1,3 +1,3 @@
-<a href="little_robot_sound_factory_Jump_00.mp3">jump 1</a>
+<a href="https://drive.google.com/file/d/1qs4HZ_J_ilxUiDBacZ1vRf1kgdD7y5kx/view?usp=sharing">jump 1</a>
 <p>
-<a href="multimedia_retro_game_jump.mp3">jump 2</a>
+<a href="https://drive.google.com/file/d/1d5y7R_lXVIIO716P7nUORdS3E6-lzGp4/view?usp=sharing">jump 2</a>
