--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
   <head>
   </head>
   <body>
-    
-    Hi
+    <p style="font-size:30px,color:red">This is a paragraph.</p>
+  
     
     </html> 
   </body>
