--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
   </head>  
   <body>
-    <p style="color:red">This is a paragraph.</p> 
+    <p style="color:red; font-size:30px">This is a paragraph.</p> 
   
     
     </html> 
