--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <html>
   <head>
+    <style>
+body  {
+  background-image: url("profile.png");
+  background-color: #cccccc;
+}
+</style>
+    
   </head>  
   <body>
     <p style="color:red; font-size:30px">This is a paragraph.</p> 
