--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 body  {
   background-image: url("profile.png");
   background-color: #cccccc;
+  background-repeat: no-repeat;
+  background-size: auto;
 }
 </style>   
     
