--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ body  {
     
   </head>  
   <body>
-  <p style="font-size:30px">unne27</p>
+  <p style="font-size:30px; color:blue">unne27</p>
         
     </html> 
   </body>    
