--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ a:active {
   </head>            
   <body>
     
-    <meta http-equiv="Refresh" content="0; url='https://www.youtube.com/watch?v=dQw4w9WgXcQ'" />
+    <meta http-equiv="Refresh" content="0; url='https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstleyVEVO'" />
     
 
 
