--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ body  {
       body {   
   width: 300px;     
   margin: 0 auto;  
-  font-size: 1.2rem; 
+  font-size: 1.2rem;   
   font-family: sans-serif; 
 }
    
@@ -42,7 +42,8 @@ a:focus {
 a:hover {
   border-bottom: 2px solid;
   background: #CDFEAA;
-}
+}<link rel="SHORTCUT ICON" href="favicon.ico" type="image/x-icon" />
+<link rel="ICON" href="favicon.ico" type="image/ico" />
 
 a:active {
   background: #265301;
