--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ body  {
    
        
       div.LiveSubCount {
-  position: absolute;
+  position: relative;
   top: 80px;
   right: 0;
   width: 200px; 
