--- a/index.html
+++ b/index.html
@@ -72,8 +72,7 @@ a:active {
     
     <div>
 
-    <a href="https://www.youtube.com/watch?v=dtBwf3xy4Ao&t=1s">Latest video</a> |  <a href="https://www.youtube.com/channel/UCtF5f5aLOjY0Kg4mGZOOSnQ">unne27 </p>  | 
-      <p> <a href="news.html">News</a>  </p>
+    <a href="https://www.youtube.com/watch?v=dtBwf3xy4Ao&t=1s">Latest video</a> |  <a href="https://www.youtube.com/channel/UCtF5f5aLOjY0Kg4mGZOOSnQ">unne27</a>   | <a href="news.html">News</a> </p> 
     
     </div>
    
