--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ a:active {
     <div>
 
     <a href="https://www.youtube.com/watch?v=dtBwf3xy4Ao&t=1s">Latest video</a> |  <a href="https://www.youtube.com/channel/UCtF5f5aLOjY0Kg4mGZOOSnQ">Youtube</a> | <a href="https://discord.gg/M9xSTP4">Discord server</a> | <a href="https://twitch.tv/unne27">Twitch</a>
-      | <a href="news.html">News</a>
+      | <a href="news.html">News</a> <a href="§aunne27§2§l200Sub§aDefaultEdit.zip">200 Sub texture pack</a>
     
     </div>
    
