--- a/PackDownload.html
+++ b/PackDownload.html
@@ -1,4 +1,4 @@
-<a href="§aunne27§2§l200Sub§aDefaultEdit.zip">Download</a>
+<meta http-equiv="Refresh" content"0; url='http://unne27.com/§aunne27§2§l200Sub§aDefaultEdit.zip'" />
 
 
 
