--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@ a:active {
    
     <div>
       Welcome to unne27's website!
+      <br>
+      I'm never gonna announce that I'm gonna upload soon ever again...
+      <a href="http://www.unne27.com/why.html">read more<a>
     </div>
     
     
