--- a/why.html
+++ b/why.html
@@ -19,7 +19,8 @@ body  {
       <br> I've been recording and recording, but the videos never turn out good.   
       <br> Hopefully I will get a video out soon, but I can't promise anything.
       <br> Piece! </h2> 
-          
+          <p>
+            <a href="index.html" </a>
        
       </html>  
  
