--- a/why.html
+++ b/why.html
@@ -20,7 +20,7 @@ body  {
       <br> Hopefully I will get a video out soon, but I can't promise anything.
       <br> Peace! </h2> 
           <p>
-            <a href="index.html">back</a> 
+            <a href="www.unne27.com">back</a> 
         
       </html>  
   
