--- a/games/shooter/index.html
+++ b/games/shooter/index.html
@@ -1,7 +1,5 @@
  <form action="/action_page.php">
-  <label for="fname">First name:</label>
+  <label for="fname">Password:</label>
   <input type="text" id="fname" name="fname"><br><br>
-  <label for="lname">Last name:</label>
-  <input type="text" id="lname" name="lname"><br><br>
   <input type="submit" value="Submit">
 </form> 
