--- a/games/shooter/index.html
+++ b/games/shooter/index.html
@@ -1,4 +1,16 @@
- <input onchange="goToPage(event)">
+<head>
+ 
+ <style>
+#myDIV {
+ display: none
+}
+</style>
+ 
+</head>
+
+
+
+<input onchange="goToPage(event)">
 <script>
  var x = document.getElementById("myDIV");
  function goToPage(e) {
