--- a/games/shooter/index.html
+++ b/games/shooter/index.html
@@ -10,7 +10,7 @@
 
   
 
-<input onchange="goToPage(event)">
+<textarea onchange="goToPage(event)">
 <script>
  var x = document.getElementById("myDIV");
  function goToPage(e) {
@@ -19,7 +19,7 @@
   
     x.style.display = "block";
   
-  
+   
 }
   
 } 
