--- a/games/shooter/index.html
+++ b/games/shooter/index.html
@@ -17,6 +17,7 @@
  var myInput = document.getElementById("myinput");
 myInput.onkeyup = function() {
 if(myInput.value == "ThisIsAPassword") {
+ console.log(myInput.value);
     x.style.display = "block";
  
 }
