--- a/games/shooter/index.html
+++ b/games/shooter/index.html
@@ -13,12 +13,12 @@
 <input id="myinput"> 
 <script>
   
- var x = document.getElementById("myDIV");
  var myInput = document.getElementById("myinput");
 myInput.onkeyup = function() {
 if(myInput.value == "ThisIsAPassword") {
  console.log(myInput.value);
-    x.style.display = "block";
+   var x = document.getElementById("myDiv");
+   x.style.display = "block";
  
 }
 }
