--- a/games/shooter/index.html
+++ b/games/shooter/index.html
@@ -12,7 +12,7 @@
   
 <input id="myinput"> 
 <div id="myDiv">
- test  
+ <iframe src="https://editor.p5js.org/unne27YT/full/NjieGWphj"></iframe>
 </div>
 <script>
   
