--- a/a67Y9X29DIiqL9/index.html
+++ b/a67Y9X29DIiqL9/index.html
@@ -1,1 +1,1 @@
-<iframe src="https://editor.p5js.org/unne27YT/full/NjieGWphj"></iframe> 
+<iframe src="https://editor.p5js.org/unne27YT/full/NjieGWphj" width="200" height="200"></iframe> 
