--- a/games/shooter/index.html
+++ b/games/shooter/index.html
@@ -14,7 +14,7 @@
 <div id="myDiv">
  <iframe src="https://editor.p5js.org/unne27YT/full/NjieGWphj"></iframe>
 </div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/sjcl/1.0.8/sjcl.min.js.map"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/sjcl/1.0.8/sjcl.min.js"></script>
 
 <script>
 var bitArray = sjcl.hash.sha256.hash("mymessage");  
