--- a/games/shooter/index.html
+++ b/games/shooter/index.html
@@ -17,7 +17,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/sjcl/1.0.8/sjcl.min.js"></script>
 
 <script>
-var bitArray = sjcl.hash.sha256.hash("mymessage"); 
+var bitArray = sjcl.hash.sha256.hash("ThisIsAPassword"); 
 var digest = sjcl.codec.hex.fromBits(bitArray);  
  console.log(digest);
  var myInput = document.getElementById("myinput");
