--- a/games/shooter/index.html
+++ b/games/shooter/index.html
@@ -31,6 +31,7 @@ if(digest == "4ad371ae554684864912df9d54f410f8ba2331fced604363a8271eef116f6def")
  
    var x = document.getElementById("myDiv");
    x.style.display = "block";
+ myInput.style.display = "none";
  
 }
 } 
