--- a/games/shooter/index.html
+++ b/games/shooter/index.html
@@ -8,9 +8,10 @@
  
 </head>
 
- 
+<div id="Div2">
 <input id="myinput"> 
 <button type="button" onclick="submit()">Submit</button>
+</div>
 <div id="myDiv">
  <iframe src="https://editor.p5js.org/unne27YT/full/NjieGWphj"></iframe>
 </div>
@@ -30,8 +31,10 @@ submit = function() {
 if(digest == "4ad371ae554684864912df9d54f410f8ba2331fced604363a8271eef116f6def") {
  
    var x = document.getElementById("myDiv");
+ let myInput2 = document.getElementById("Div2");
+ 
    x.style.display = "block";
- myInput.style.display = "none";
+ myInput2.style.display = "none";
  
 }
 } 
