--- a/games/shooter/index.html
+++ b/games/shooter/index.html
@@ -13,7 +13,7 @@
 <button type="button" onclick="submit()">Submit</button>
 </div>
 <div id="myDiv">
- <iframe src="https://editor.p5js.org/unne27YT/full/NjieGWphj"></iframe>
+ <iframe src="https://editor.p5js.org/unne27YT/full/NjieGWphj" height=425 width=400></iframe>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/sjcl/1.0.8/sjcl.min.js"></script>
 
