--- a/UGuesser/index.html
+++ b/UGuesser/index.html
@@ -4,7 +4,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>UGuesser</title>
+    <title>UGuesser alpha 2.0</title>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
 
     <link rel="stylesheet" type="text/css" href="./style.css" />
