--- a/UGuesser/index.html
+++ b/UGuesser/index.html
@@ -4,7 +4,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>UGuesser alpha 2.1</title>
+    <title>UGuesser alpha 2.2</title>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
 
     <link rel="stylesheet" type="text/css" href="./style.css" />
@@ -14,7 +14,7 @@
     <div id="mappano">
     <div id="map"></div>
     <div id="pano"></div>
-      
+    <div id="round"></div>
     <button type="button" id="guessbtn">Guess</button>
     </div>
     <div id="distancemap">
