--- a/UGuesser/index.html
+++ b/UGuesser/index.html
@@ -4,7 +4,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>UGuesser alpha 2.5</title>
+    <title>UGuesser alpha 2.6</title>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
 
     <link rel="stylesheet" type="text/css" href="./style.css" />
@@ -21,6 +21,7 @@
       <div id="bigmap"></div>
       <div id="distance"></div>
       <div id="score"></div>
+      <div id="pb"></div>
       <button type="button" id="nextbtn">Next</button>
     </div>
     <!-- 
