--- a/UGuesser/mapmaker/index.html
+++ b/UGuesser/mapmaker/index.html
@@ -1,29 +1,18 @@
-<!--DOCTYPE html-->
-
+<!DOCTYPE html>
 
 <html>
   <head>
     <meta charset="utf-8">
-    <title>UGuesser alpha 4.0</title>
+    <title>UGuesser map maker</title>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
 
     <link rel="stylesheet" type="text/css" href="./style.css" />
     <script type="module" src="./index.js"></script>
   </head>
   <body>
-    <div id="mappano">
+    <button type="button" id="donebtn">Done</button>
+    <div id="text"></div>
     <div id="map"></div>
-    <div id="pano"></div>
-    <div id="round"></div>
-    <button type="button" id="guessbtn">Guess</button>
-    </div>
-    <div id="distancemap">
-      <div id="bigmap"></div>
-      <div id="distance"></div>
-      <div id="score"></div>
-      <div id="pb"></div>
-      <button type="button" id="nextbtn">Next</button>
-    </div>
     <!-- 
      The `defer` attribute causes the callback to execute after the full HTML
      document has been parsed. For non-blocking uses, avoiding race conditions,
