--- a/GeoGuessrU/game/index.html
+++ b/GeoGuessrU/game/index.html
@@ -3,6 +3,13 @@
 
 <html>
   <head>
+    <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-CZ5XNG7P2E');
+</script>
     <meta charset="utf-8">
     <title>UGuesser alpha 4.0</title>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
