--- a/GeoGuessrU/index.html
+++ b/GeoGuessrU/index.html
@@ -1,7 +1,9 @@
 <!--DOCTYPE html-->
 <html>
   <head>
-    <script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-CZ5XNG7P2E"></script>
+<script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
