--- a/GeoGuessrU/game/index.html
+++ b/GeoGuessrU/game/index.html
@@ -3,13 +3,15 @@
 
 <html> 
   <head>
-    <script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-CZ5XNG7P2E"></script>
+<script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
   gtag('config', 'G-CZ5XNG7P2E');
-</script> 
+</script>
     <meta charset="utf-8">
     <title>UGuesser alpha 4.0.1</title>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
