--- a/UGuesser/index.html
+++ b/UGuesser/index.html
@@ -1,8 +1,16 @@
 <!--DOCTYPE html-->
 <html>
   <head>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CZ5XNG7P2E"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-CZ5XNG7P2E', {cookie_flags: 'SameSite=None;Secure'});
+</script>
     <meta charset="utf-8">
-    <title>UGuesser alpha 4.0</title>
+    <title>UGuesser alpha 4.0.1</title>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
 
     <link rel="stylesheet" type="text/css" href="./style.css" />
