--- a/GeoGuessrU/game/index.html
+++ b/GeoGuessrU/game/index.html
@@ -1,19 +1,18 @@
 <!--DOCTYPE html-->
 
 
-<html> 
+<html>
   <head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-CZ5XNG7P2E"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CZ5XNG7P2E"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-CZ5XNG7P2E');
+  gtag('config', 'G-CZ5XNG7P2E', {cookie_flags: 'SameSite=None;Secure'});
 </script>
     <meta charset="utf-8">
-    <title>UGuesser alpha 4.0.1</title> 
+    <title>UGuesser alpha 5.0</title>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
 
     <link rel="stylesheet" type="text/css" href="./style.css" />
@@ -44,6 +43,9 @@
           async
           defer
      ></script>
+
+    <!-- Google tag (gtag.js) -->
+
 
      <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase.js"></script>
      <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
