--- a/GeoGuessrU/index.html
+++ b/GeoGuessrU/index.html
@@ -8,17 +8,23 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-CZ5XNG7P2E');
+  gtag('config', 'G-CZ5XNG7P2E', {cookie_flags: 'SameSite=None;Secure'});
 </script>
     <meta charset="utf-8">
-    <title>UGuesser alpha 4.0.1</title>
-    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script> 
+    <title>UGuesser alpha 5.0</title>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
 
     <link rel="stylesheet" type="text/css" href="./style.css" />
     <script type="module" src="./index.js"></script>
+
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-CZ5XNG7P2E"></script>
+
   </head>
   <body>
     <button id="play">Play</button>
     <button id="mapmaker">Map maker</button>
     <div id="pb"></div>
+
+
   </body>
