--- a/UGuesser/game/index.html
+++ b/UGuesser/game/index.html
@@ -1,9 +1,9 @@
-<!--DOCTYPE html-->
+<!DOCTYPE html>
 
 
 <html>
   <head>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CZ5XNG7P2E"></script>
+    <script defer src="https://www.googletagmanager.com/gtag/js?id=G-CZ5XNG7P2E"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -39,7 +39,7 @@
      with https://www.npmjs.com/package/@googlemaps/js-api-loader.
     -->
     <script
-          src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD4pB_pLJpBk2iF0U4u7Hx8886VfhzAGcc&callback=initMap&callback=initialize"
+          src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD4pB_pLJpBk2iF0U4u7Hx8886VfhzAGcc"
           async
           defer
      ></script>
