--- a/UGuesser/game/index.html
+++ b/UGuesser/game/index.html
@@ -24,6 +24,7 @@
     <div id="pano" style="position: fixed;"></div>
     <div id="round"></div>
     <button type="button" id="guessbtn">Guess</button>
+    <div id="compass"></div>
     </div>
     <div id="distancemap">
       <div id="bigmap"></div>
