--- a/UGuesser/game/index.html
+++ b/UGuesser/game/index.html
@@ -25,6 +25,7 @@
     <div id="round"></div>
     <button type="button" id="guessbtn">Guess</button>
     <div id="compass"></div>
+    <div id="timer"></div>
     </div>
     <div id="distancemap">
       <div id="bigmap"></div>
