--- a/am/index.html
+++ b/am/index.html
@@ -1,1 +1,1 @@
-<embed src="https://spelo.se" width=200 height=200 />
+<object type="text/html" data="http://spelo.se" width="800px" height="600px" />
