--- a/am/index.html
+++ b/am/index.html
@@ -1,1 +1,1 @@
-<object type="text/html" data="http://spelo.se" width="800px" height="600px" />
+<object type="text/html" data="https://spelo.se" width="800px" height="600px" />
