--- a/citygen/index.html
+++ b/citygen/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<script src="https://raw.githubusercontent.com/josephrocca/clip-image-sorter/main/enable-threads.js">
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no">
 		<title>CityGen</title>
