--- a/UGuesser/game/index.html
+++ b/UGuesser/game/index.html
@@ -41,7 +41,7 @@
      with https://www.npmjs.com/package/@googlemaps/js-api-loader.
     -->
     <script
-          src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD4pB_pLJpBk2iF0U4u7Hx8886VfhzAGcc&callback=initialize"
+          src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD4pB_pLJpBk2iF0U4u7Hx8886VfhzAGcc"
           async
           defer
      ></script>
