--- a/UGuesser/game/index.html
+++ b/UGuesser/game/index.html
@@ -19,7 +19,7 @@
     <script type="text/javascript" src="./index.js"></script>
   </head>
   <body>
-    <div id="mappano">
+    <div id="mappano" style="position: fixed;">
     <div id="map"></div>
     <div id="pano" style="position: fixed;"></div>
     <div id="round"></div>
