--- a/UGuesser/game/index.html
+++ b/UGuesser/game/index.html
@@ -20,8 +20,12 @@
   </head>
   <body>
     <div id="mappano" style="position: fixed;">
+    <div id="outerMap" style="position:fixed">
     <div id="map"></div>
+    </div>
+    <div id="outerPano" stype="position:fixed">
     <div id="pano" style="position: fixed;"></div>
+    </div>
     <div id="round"></div>
     <button type="button" id="guessbtn">Guess</button>
     <div id="compass"></div>
